# spn-compiler

compiler/src/pipeline/steps/hdl/: EmbedController.cpp  EmbedController.hpp
mlir/: CMakeLists.txt
mlir/include/Conversion/LoSPNtoFPGA/: fixedpoint.hpp  ufloat.hpp
mlir/lib/Conversion/LoSPNtoFPGA/: CMakeLists.txt  fixedpoint.cpp  ufloat.cpp
